layout/generic/nsIFrame.h
@@ -3585,6 +3585,17 @@ class nsIFrame : public nsQueryFrame {
   mozilla::OverflowAreas GetOverflowAreasRelativeToParent() const;
 
   /**
+   * Same as GetOverflowAreasRelativeToParent(), except that it also unions in
+   * the normal position overflow area if this frame is relatively or sticky
+   * positioned.
+   *
+   * @return the overflow area relative to the parent frame, in the parent
+   * frame's coordinate system
+   */
+  mozilla::OverflowAreas GetActualAndNormalOverflowAreasRelativeToParent()
+      const;
+
+  /**
    * Same as ScrollableOverflowRect, except relative to the parent
    * frame.
    *
